remove deprecations, remove dust module